--- a/AdminConstruct.Blazor/Layout/NavMenu.razor
+++ b/AdminConstruct.Blazor/Layout/NavMenu.razor
@@ -1,6 +1,6 @@
 ﻿<div class="top-row ps-3 navbar navbar-dark">
     <div class="container-fluid">
-        <a class="navbar-brand" href="">AdminContruct.Blazor</a>
+        <a class="navbar-brand" href="">AdminConstruct.Blazor</a>
         <button title="Navigation menu" class="navbar-toggler" @onclick="ToggleNavMenu">
             <span class="navbar-toggler-icon"></span>
         </button>
