--- a/AdminConstruct.Blazor/_Imports.razor
+++ b/AdminConstruct.Blazor/_Imports.razor
@@ -6,5 +6,5 @@
 @using Microsoft.AspNetCore.Components.Web.Virtualization
 @using Microsoft.AspNetCore.Components.WebAssembly.Http
 @using Microsoft.JSInterop
-@using AdminContruct.Blazor
-@using AdminContruct.Blazor.Layout
+@using AdminConstruct.Blazor
+@using AdminConstruct.Blazor.Layout
