--- a/AdminConstruct.Ryzor/Views/Shared/_Layout.cshtml
+++ b/AdminConstruct.Ryzor/Views/Shared/_Layout.cshtml
@@ -33,6 +33,11 @@
             <a class="block px-3 py-2 rounded hover:bg-gray-100" asp-area="" asp-controller="Products" asp-action="Index">Productos</a>
             <a class="block px-3 py-2 rounded hover:bg-gray-100" asp-area="" asp-controller="Customers" asp-action="Index">Clientes</a>
             <a class="block px-3 py-2 rounded hover:bg-gray-100" asp-area="" asp-controller="Sales" asp-action="Index">Ventas</a>
+            <a class="block px-3 py-2 rounded hover:bg-gray-100" asp-area="" asp-controller="Import" asp-action="Index">Importar Excel</a>
+            <div class="pt-2 border-t"></div>
+            <a class="block px-3 py-2 rounded hover:bg-gray-100" asp-area="" asp-controller="Export" asp-action="ProductsExcel">Exportar Productos (Excel)</a>
+            <a class="block px-3 py-2 rounded hover:bg-gray-100" asp-area="" asp-controller="Export" asp-action="CustomersExcel">Exportar Clientes (Excel)</a>
+            <a class="block px-3 py-2 rounded hover:bg-gray-100" asp-area="" asp-controller="Export" asp-action="SalesExcel">Exportar Ventas (Excel)</a>
         </nav>
     </aside>
     <main role="main" class="col-span-12 md:col-span-9 lg:col-span-10">
