Feat: manage excel

--- a/AdminConstruct.Ryzor/Views/Shared/_Layout.cshtml
+++ b/AdminConstruct.Ryzor/Views/Shared/_Layout.cshtml
@@ -33,6 +33,10 @@
                     <li class="nav-item">
                         <a class="nav-link text-dark" asp-area="Sales" asp-controller="Sales" asp-action="Index">Ventas</a>
                     </li>
+                    <li class="nav-item">
+                        <a class="nav-link text-dark" asp-area="ExcelImports" asp-controller="ExcelImport" asp-action="Index">Carga Masiva Excel</a>
+                    </li>
+
                 </ul>
 
                 <!-- Usuario / Cerrar sesión -->
