--- a/AdminConstruct.Razor/Views/Shared/_Layout.cshtml
+++ b/AdminConstruct.Razor/Views/Shared/_Layout.cshtml
@@ -31,7 +31,7 @@
                         <a class="nav-link text-dark" asp-area="Customers" asp-controller="Customers" asp-action="Index">Clientes</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link text-dark" asp-area="Sales" asp-controller="Sales" asp-action="Index">Ventas</a>
+                        <a class="nav-link text-dark" asp-controller="Sales" asp-action="Index">Ventas</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link text-dark" asp-area="ExcelImports" asp-controller="ExcelImport" asp-action="ExcelImport">Carga Masiva Excel</a>
