fix: update the project

--- a/AdminConstruct.Web/Views/Admin/Customers/Details.cshtml
+++ b/AdminConstruct.Web/Views/Admin/Customers/Details.cshtml
@@ -1,4 +1,4 @@
-@model AdminConstruct.Ryzor.ViewModels.CustomerViewModel
+@model AdminConstruct.Web.ViewModels.CustomerViewModel
 
 @{
     ViewData["Title"] = "Detalles del Cliente";
