--- a/AdminConstruct.Web/Views/Admin/Customers/Index.cshtml
+++ b/AdminConstruct.Web/Views/Admin/Customers/Index.cshtml
@@ -1,4 +1,4 @@
-@model IEnumerable<AdminConstruct.Ryzor.ViewModels.CustomerViewModel>
+@model IEnumerable<AdminConstruct.Web.ViewModels.CustomerViewModel>
 
 @{
     ViewData["Title"] = "Clientes";
