--- a/AdminConstruct.Web/Views/Admin/Products/Details.cshtml
+++ b/AdminConstruct.Web/Views/Admin/Products/Details.cshtml
@@ -1,4 +1,4 @@
-@model AdminConstruct.Ryzor.ViewModels.ProductViewModel
+@model AdminConstruct.Web.ViewModels.ProductViewModel
 
 @{
     ViewData["Title"] = "Detalles del Producto";
