--- a/AdminConstruct.Web/Views/Admin/Products/Index.cshtml
+++ b/AdminConstruct.Web/Views/Admin/Products/Index.cshtml
@@ -1,4 +1,4 @@
-@model IEnumerable<AdminConstruct.Ryzor.ViewModels.ProductViewModel>
+@model IEnumerable<AdminConstruct.Web.ViewModels.ProductViewModel>
 
 @{
     ViewData["Title"] = "Productos";
