--- a/AdminConstruct.Web/Views/Admin/Sales/Index.cshtml
+++ b/AdminConstruct.Web/Views/Admin/Sales/Index.cshtml
@@ -1,4 +1,4 @@
-@model IEnumerable<AdminConstruct.Ryzor.ViewModels.SaleViewModel>
+@model IEnumerable<AdminConstruct.Web.ViewModels.SaleViewModel>
 
 @{
     ViewBag.Title = "Listado de Ventas";
